# claude-watch

./: .gitignore  HANDOFF.md  Makefile  ORACLE-RESEARCH.md  PLAN-v03-prompt-analytics.md  README.md  WORK-LOG.md  advisor_activity.py  claude_watch.py  claude_watch_data.py  claude_watch_tui.py  claude_watch_tui.tcss  fleet_monitor.py  paperclip_agents.json  pyproject.toml  token_watch.py  token_watch_advisor.py  token_watch_data.py  token_watch_tui.py  token_watch_tui.tcss
hooks/: token-tracker.sh
scripts/: SYNC-BUGS-SKILL.md  extract_session.py  noncli_audit.py  session_recovery.py  statusline-command.sh  sync-bugs-to-notion.sh
tests/: conftest.py  test_advisor_activity.py  test_advisor_autoack.py  test_auto_wire.py  test_burn_sparkline.py  test_burndown.py  test_decisions_digest.py  test_engine_breakdown.py  test_session_activity_history.py  test_smoke.py  test_test_rollup.py  test_token_attribution.py  test_wire_reliability.py
