[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "claude-watch"
version = "0.1.0"
description = "Real-time terminal dashboard for monitoring Claude Code token usage, session history, and burn rate"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0",
]

[project.optional-dependencies]
tui = ["textual>=0.50"]

[project.scripts]
claude-watch = "claude_watch:main"
